# FmodCMake

./: .gitignore  CMakeLists.txt  readme.md
.github/workflows/: build-test.yml
assets/programmer_sounds/basic/: keys.txt
assets/programmer_sounds/localized/en/: keys.txt
assets/programmer_sounds/localized/es/: keys.txt
assets/programmer_sounds/localized/pt/: keys.txt
assets/soundbanks/Desktop/: Master.bank  Master.strings.bank  Music.bank  ProgrammerSounds_Basic.bank  ProgrammerSounds_Localized_en.bank  ProgrammerSounds_Localized_es.bank  ProgrammerSounds_Localized_pt.bank
config/: audio_engine.ini
fmod_project/: readme.md
libs/: CMakeLists.txt
libs/fmod/: CMakeLists.txt
libs/fmod/core/: readme.md
libs/fmod/core/inc/: readme.md
libs/fmod/plugins/: readme.md
libs/fmod/plugins/linux_x64/: readme.md
libs/fmod/plugins/mac/: readme.md
libs/fmod/plugins/win_x64/: readme.md
libs/fmod/studio/: readme.md
libs/raygui/: CMakeLists.txt
libs/raylib/: CMakeLists.txt
libs/raylib/include/: readme.md
src/: main.cpp  pch.h
src/app/: app.cpp  app.h
src/audio/: audio_engine.cpp  audio_engine.h
src/core/: game.cpp
src/gui/: gui.cpp  gui.h  gui_styles.c
src/gui/widgets/: widget.h
src/input/: input_events.h
src/media/: media_framework.cpp  media_framework.h  media_framework_data.h
src/pages/: page.h  page_cover.cpp  page_cover.h  page_programmer_sounds.cpp  page_programmer_sounds.h
tools/: get_fmod_api.py  get_raylib.py  install_fmod_api.py  install_raylib.py  readme.md  setup_fmod_api.py  setup_raygui_sources.py  setup_raylib.py
(+20 files in other folders)
